--- a/style.css
+++ b/style.css
@@ -117,11 +117,11 @@ p:hover {
     color: white;
 }
 
-#funcbtn {
+.funcbtn {
     color: #171515;
     background-color: #03D64F;
 }
 
-#funcbtn:hover {
+.funcbtn:hover {
     background-color: #07fc61;
 }
