--- a/style.css
+++ b/style.css
@@ -47,12 +47,10 @@ body{
     width: 300px;
 }
 
+
 input {
     padding: 0%;
     margin: 0%;
-    width: 290px;
-    height: 120px;
-    margin: 3px;
     text-align: right;
     font-size: 50px;
     background-color: #22252D;
@@ -62,6 +60,17 @@ input {
     pointer-events: none;
 }
 
+.screen {
+    width: 290px;
+    margin: 3px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.screen-value {
+    font-size: 20px;
+    margin-top: 10px;
+}
 
 button {
     background-color: #171515;
